syntax = "proto3";

option csharp_namespace = "FitFinder.Protos";

import "google/protobuf/duration.proto";  
import "google/protobuf/timestamp.proto";

service SessionProtocol {
	rpc AddSession(AddSessionRequest) returns (AddSessionReply);
}

message AddSessionRequest {
	string title = 1;
	string Description = 2;
	google.protobuf.Timestamp SessionDateTime = 3;
	LatLng Location = 4;
	string LocationString = 5;
	bool IsOnline = 6;
	bool IsInPerson = 7;
	double Price = 8;
	google.protobuf.Duration Duration = 9;
}

message AddSessionReply {
	int64 id = 1;
	string title = 2;
	string Description = 3;
	google.protobuf.Timestamp SessionDateTime = 4;
	LatLng Location = 5;
	string LocationString = 6;
	bool IsOnline = 7;
	bool IsInPerson = 8;
	double Price = 9;
	google.protobuf.Duration Duration = 10;
	int64 trainerUserId = 11;
}

message LatLng {
	double latitude = 1;
	double longitude = 2;
}